Fix spacing

--- a/sass/layout/components/_toc.scss
+++ b/sass/layout/components/_toc.scss
@@ -51,6 +51,7 @@
 
   li { 
     font-size: var(--font-base);
+    margin-top: .5rem;
   }
 
   a {
